--- a/index.html
+++ b/index.html
@@ -84,170 +84,157 @@ label { display: block; margin-bottom: 6px; cursor: pointer; }
 <script>
 const diasSemana = ["Domingo","Segunda-feira","Terça-feira","Quarta-feira","Quinta-feira","Sexta-feira","Sábado"];
 const hojeDate = new Date();
-const nomeDia = diasSemana[hojeDate.getDay()];
-document.getElementById("diaSemana").innerText = nomeDia;
+document.getElementById("diaSemana").innerText = diasSemana[hojeDate.getDay()];
 const dia = String(hojeDate.getDate()).padStart(2,'0');
 const mes = String(hojeDate.getMonth()+1).padStart(2,'0');
 const ano = hojeDate.getFullYear();
 document.getElementById("dataHoje").innerText = `${dia}/${mes}/${ano}`;
 
 fetch('cardapio.json?t=' + new Date().getTime())
-  .then(response => response.json())
-  .then(cardapioFinal => {
-    document.getElementById("horarioFuncionamento").textContent = 
-      `Horário: ${cardapioFinal.horarioFuncionamento.abertura} - ${cardapioFinal.horarioFuncionamento.fechamento}`;
+.then(response => response.json())
+.then(cardapio => {
 
-    const marmitaOptions = document.querySelector(".marmita-options");
-    let marmita = "", valorMarmita = 0, limiteCarnes = 0;
-    let pedido = [], taxaEntrega = 0, pagamentoSelecionado = "";
-    let refrigerantesSelecionados = [];
+  document.getElementById("horarioFuncionamento").textContent = 
+    `Horário: ${cardapio.horarioFuncionamento.abertura} - ${cardapio.horarioFuncionamento.fechamento}`;
 
-    Object.keys(cardapioFinal.valoresMarmita).forEach(key=>{
-      const label = document.createElement("label");
-      label.innerHTML = `<input type="radio" name="marmita" value="${key}"> Marmita ${key} - R$${cardapioFinal.valoresMarmita[key]},00`;
-      label.querySelector('input').addEventListener("change", ()=>{
-        marmita = key;
-        valorMarmita = cardapioFinal.valoresMarmita[key];
+  const marmitaOptions = document.querySelector(".marmita-options");
+  let marmita = "", valorMarmita = 0, limiteCarnes = 0;
+  let pedido = [], taxaEntrega = 0, pagamentoSelecionado = "";
+  let refrigerantesSelecionados = [];
 
-        if (key.includes("01 Opção")) limiteCarnes = 1;
-        else if (key.includes("02 Opção")) limiteCarnes = 2;
-        else limiteCarnes = 0;
+  Object.keys(cardapio.valoresMarmita).forEach(key=>{
+    const label = document.createElement("label");
+    label.innerHTML = `<input type="radio" name="marmita" value="${key}"> Marmita ${key} - R$${cardapio.valoresMarmita[key]},00`;
+    label.querySelector('input').addEventListener("change", ()=>{
+      marmita = key;
+      valorMarmita = cardapio.valoresMarmita[key];
 
-        document.querySelectorAll("#carnes li").forEach(li=>li.classList.remove("selected"));
-        pedido = pedido.filter(item => !cardapioFinal.cardapio[nomeDia.toLowerCase()].carnes.includes(item));
+      limiteCarnes = key.includes("01 Opção") ? 1 : key.includes("02 Opção") ? 2 : 0;
 
-        const acompanhamentosContainer = document.getElementById("acompanhamentos");
-        if (key.includes("Porção")) {
-          acompanhamentosContainer.querySelectorAll("li").forEach(li=>{
-            li.classList.remove("selected");
-            li.style.pointerEvents = "none";
-            li.style.opacity = "0.5";
-          });
-          pedido = pedido.filter(item => !cardapioFinal.cardapio[nomeDia.toLowerCase()].acompanhamentos.includes(item));
-        } else {
-          acompanhamentosContainer.querySelectorAll("li").forEach(li=>{
-            li.style.pointerEvents = "auto";
-            li.style.opacity = "1";
-          });
-        }
+      document.querySelectorAll("#carnes li").forEach(li=>li.classList.remove("selected"));
+      pedido = pedido.filter(item => !cardapio.cardapio[diasSemana[hojeDate.getDay()].toLowerCase()].carnes.includes(item));
 
-        atualizarPedido();
-      });
-      marmitaOptions.appendChild(label);
-    });
-
-    function criarLista(itens, container, tipo="normal") {
-      container.innerHTML = "";
-      itens.forEach(i=>{
-        const li = document.createElement("li");
-        li.setAttribute("data-item", i);
-        li.innerHTML = `<div class="checkbox-fake">X</div><span>${i}</span>`;
-        if(tipo !== "carnes") {
-          li.classList.add("selected");
-          if(!pedido.includes(i)) pedido.push(i);
-        }
-        li.addEventListener("click", ()=>{
-          if(tipo==="carnes"){
-            const selecionadas = container.querySelectorAll("li.selected");
-            if(!li.classList.contains("selected") && selecionadas.length >= limiteCarnes) return;
-          }
-          li.classList.toggle("selected");
-          const item = li.getAttribute("data-item");
-          if(li.classList.contains("selected")){
-            if(!pedido.includes(item)) pedido.push(item);
-          } else pedido = pedido.filter(x=>x!==item);
-          atualizarPedido();
+      const acompanhamentosContainer = document.getElementById("acompanhamentos");
+      if (key.includes("Porção")) {
+        acompanhamentosContainer.querySelectorAll("li").forEach(li=>{
+          li.classList.remove("selected");
+          li.style.pointerEvents = "none";
+          li.style.opacity = "0.5";
         });
-        container.appendChild(li);
-      });
-    }
-
-    function criarListaRefrigerantes(itens, container){
-      container.innerHTML = "";
-      itens.forEach(i=>{
-        const li = document.createElement("li");
-        li.setAttribute("data-item", i);
-        li.innerHTML = `<div class="checkbox-fake">X</div><span>${i}</span>`;
-        li.addEventListener("click", ()=>{
-          li.classList.toggle("selected");
-          const item = li.getAttribute("data-item");
-          const preco = parseFloat(item.split('R$')[1]) || 0;
-          if(li.classList.contains("selected")){
-            refrigerantesSelecionados.push({nome: item, preco});
-            if(!pedido.includes(item)) pedido.push(item);
-          } else {
-            refrigerantesSelecionados = refrigerantesSelecionados.filter(r => r.nome !== item);
-            pedido = pedido.filter(x=>x!==item);
-          }
-          atualizarPedido();
+        pedido = pedido.filter(item => !cardapio.cardapio[diasSemana[hojeDate.getDay()].toLowerCase()].acompanhamentos.includes(item));
+      } else {
+        acompanhamentosContainer.querySelectorAll("li").forEach(li=>{
+          li.style.pointerEvents = "auto";
+          li.style.opacity = "1";
         });
-        container.appendChild(li);
-      });
-    }
+      }
 
-    const hojeCardapio = cardapioFinal.cardapio[nomeDia.toLowerCase()] || { carnes: [], acompanhamentos: [] };
-    criarLista(hojeCardapio.acompanhamentos, document.getElementById("acompanhamentos"), "acompanhamentos");
-    criarLista(hojeCardapio.carnes, document.getElementById("carnes"), "carnes");
-    criarListaRefrigerantes(
-      Object.entries(cardapioFinal.refrigerantes).flatMap(([tipo, list]) => list.map(r=>`${tipo} - ${r.nome} R$${r.preco}`)),
-      document.getElementById("refrigerantes")
-    );
-
-    const localEl = document.getElementById("localEntrega");
-    cardapioFinal.locaisEntrega.forEach((loc,i)=>{
-      const opt = document.createElement("option");
-      opt.value = loc.nome;
-      opt.dataset.taxa = loc.taxa;
-      opt.textContent = `${loc.nome} - R$${loc.taxa.toFixed(2)}`;
-      if(i===0) taxaEntrega = loc.taxa;
-      localEl.appendChild(opt);
+      atualizarPedido();
     });
-    localEl.addEventListener("change", ()=>{ taxaEntrega = parseFloat(localEl.selectedOptions[0].dataset.taxa); atualizarPedido(); });
+    marmitaOptions.appendChild(label);
+  });
 
-    const formasEl = document.getElementById("formasPagamentoList");
-    cardapioFinal.formasPagamento.forEach(f=>{
+  function criarLista(itens, container, tipo="normal"){
+    container.innerHTML = "";
+    itens.forEach(i=>{
       const li = document.createElement("li");
-      li.innerHTML = `<div class="checkbox-fake">X</div><span>${f}</span>`;
+      li.setAttribute("data-item", i);
+      li.innerHTML = `<div class="checkbox-fake">X</div><span>${i}</span>`;
+      if(tipo !== "carnes"){ li.classList.add("selected"); if(!pedido.includes(i)) pedido.push(i); }
       li.addEventListener("click", ()=>{
-        formasEl.querySelectorAll("li").forEach(l=>l.classList.remove("selected"));
-        li.classList.add("selected");
-        pagamentoSelecionado = f;
+        if(tipo==="carnes"){
+          const selecionadas = container.querySelectorAll("li.selected");
+          if(!li.classList.contains("selected") && selecionadas.length >= limiteCarnes) return;
+        }
+        li.classList.toggle("selected");
+        const item = li.getAttribute("data-item");
+        if(li.classList.contains("selected")){ if(!pedido.includes(item)) pedido.push(item); }
+        else pedido = pedido.filter(x=>x!==item);
         atualizarPedido();
       });
-      formasEl.appendChild(li);
+      container.appendChild(li);
     });
+  }
 
-    function atualizarPedido(){
-      const adicionais = document.getElementById("adicionais").value;
-      const totalRef = refrigerantesSelecionados.reduce((sum,r)=>sum+r.preco,0);
-      const total = valorMarmita + taxaEntrega + totalRef;
+  function criarListaRefrigerantes(itens, container){
+    container.innerHTML = "";
+    itens.forEach(i=>{
+      const li = document.createElement("li");
+      li.setAttribute("data-item", i);
+      li.innerHTML = `<div class="checkbox-fake">X</div><span>${i}</span>`;
+      li.addEventListener("click", ()=>{
+        li.classList.toggle("selected");
+        const item = li.getAttribute("data-item");
+        const preco = parseFloat(item.split('R$')[1]) || 0;
+        if(li.classList.contains("selected")){
+          if(!refrigerantesSelecionados.find(r=>r.nome===item)) refrigerantesSelecionados.push({nome:item, preco});
+          if(!pedido.includes(item)) pedido.push(item);
+        } else {
+          refrigerantesSelecionados = refrigerantesSelecionados.filter(r => r.nome !== item);
+          pedido = pedido.filter(x=>x!==item);
+        }
+        atualizarPedido();
+      });
+      container.appendChild(li);
+    });
+  }
 
-      const itensEl = document.getElementById("itensPedido");
-      itensEl.innerHTML = `
-        ${marmita?`<li>🍱 Marmita ${marmita} - R$${valorMarmita}</li>`:""}
-        ${pedido.length?pedido.map(i=>`<li>✅ ${i}</li>`).join(""):"<li>Nenhum item selecionado</li>"}
-        ${adicionais?`<li>📝 ${adicionais}</li>`:""}
-        ${pagamentoSelecionado?`<li>💳 Pagamento: ${pagamentoSelecionado}</li>`:""}
-        <li>🏍️ Taxa de Entrega: R$${taxaEntrega.toFixed(2)}</li>
-        <li>💰 Total: R$${total.toFixed(2)}</li>
-      `;
-    }
+  const hojeCardapio = cardapio.cardapio[diasSemana[hojeDate.getDay()].toLowerCase()] || { carnes: [], acompanhamentos: [] };
+  criarLista(hojeCardapio.acompanhamentos, document.getElementById("acompanhamentos"), "acompanhamentos");
+  criarLista(hojeCardapio.carnes, document.getElementById("carnes"), "carnes");
+  criarListaRefrigerantes(Object.entries(cardapio.refrigerantes).flatMap(([tipo,list]) => list.map(r=>`${tipo} - ${r.nome} R$${r.preco}`)), document.getElementById("refrigerantes"));
 
-    // --------- Aqui está a correção do botão ---------
+  const localEl = document.getElementById("localEntrega");
+  cardapio.locaisEntrega.forEach((loc,i)=>{
+    const opt = document.createElement("option");
+    opt.value = loc.nome;
+    opt.dataset.taxa = loc.taxa;
+    opt.textContent = `${loc.nome} - R$${loc.taxa.toFixed(2)}`;
+    if(i===0) taxaEntrega = loc.taxa;
+    localEl.appendChild(opt);
+  });
+  localEl.addEventListener("change", ()=>{ taxaEntrega = parseFloat(localEl.selectedOptions[0].dataset.taxa); atualizarPedido(); });
+
+  const formasEl = document.getElementById("formasPagamentoList");
+  cardapio.formasPagamento.forEach(f=>{
+    const li = document.createElement("li");
+    li.innerHTML = `<div class="checkbox-fake">X</div><span>${f}</span>`;
+    li.addEventListener("click", ()=>{
+      formasEl.querySelectorAll("li").forEach(l=>l.classList.remove("selected"));
+      li.classList.add("selected");
+      pagamentoSelecionado = f;
+      atualizarPedido();
+    });
+    formasEl.appendChild(li);
+  });
+
+  function atualizarPedido(){
+    const adicionais = document.getElementById("adicionais").value;
+    const totalRef = refrigerantesSelecionados.reduce((sum,r)=>sum+r.preco,0);
+    const total = valorMarmita + taxaEntrega + totalRef;
+
+    const itensEl = document.getElementById("itensPedido");
+    itensEl.innerHTML = `
+      ${marmita?`<li>🍱 Marmita ${marmita} - R$${valorMarmita}</li>`:""}
+      ${pedido.length?pedido.map(i=>`<li>✅ ${i}</li>`).join(""):"<li>Nenhum item selecionado</li>"}
+      ${adicionais?`<li>📝 ${adicionais}</li>`:""}
+      ${pagamentoSelecionado?`<li>💳 Pagamento: ${pagamentoSelecionado}</li>`:""}
+      <li>🏍️ Taxa de Entrega: R$${taxaEntrega.toFixed(2)}</li>
+      <li>💰 Total: R$${total.toFixed(2)}</li>
+    `;
+  }
+
   document.getElementById("enviarWhats").addEventListener("click", () => {
     const agora = new Date();
-    const horas = agora.getHours();
-    const minutos = agora.getMinutes();
-    const agoraMinutos = horas * 60 + minutos;
+    const [horaAbertura, minAbertura] = cardapio.horarioFuncionamento.abertura.split(":").map(Number);
+    const [horaFechamento, minFechamento] = cardapio.horarioFuncionamento.fechamento.split(":").map(Number);
+    const agoraMin = agora.getHours()*60 + agora.getMinutes();
+    const aberturaMin = horaAbertura*60 + minAbertura;
+    const fechamentoMin = horaFechamento*60 + minFechamento;
 
-    const [horaAbertura, minAbertura] = cardapioFinal.horarioFuncionamento.abertura.split(":").map(Number);
-    const [horaFechamento, minFechamento] = cardapioFinal.horarioFuncionamento.fechamento.split(":").map(Number);
-    const aberturaMinutos = horaAbertura * 60 + minAbertura;
-    const fechamentoMinutos = horaFechamento * 60 + minFechamento;
-
-    if (agoraMinutos < aberturaMinutos || agoraMinutos > fechamentoMinutos) {
-        alert(`Desculpe! Pedidos só podem ser feitos entre ${cardapioFinal.horarioFuncionamento.abertura} e ${cardapioFinal.horarioFuncionamento.fechamento}.`);
-        return;
+    if(agoraMin < aberturaMin || agoraMin > fechamentoMin){
+      alert(`Desculpe! Pedidos só podem ser feitos entre ${cardapio.horarioFuncionamento.abertura} e ${cardapio.horarioFuncionamento.fechamento}.`);
+      return;
     }
 
     const nome = document.getElementById("nomeCliente").value || "Cliente";
@@ -255,83 +242,42 @@ fetch('cardapio.json?t=' + new Date().getTime())
     const adicionais = document.getElementById("adicionais").value || "";
     const local = document.getElementById("localEntrega").value;
     const pagamento = pagamentoSelecionado || "Não definido";
-
     const totalRef = refrigerantesSelecionados.reduce((sum,r)=>sum+r.preco,0);
     const total = valorMarmita + taxaEntrega + totalRef;
 
-    // ---------- Montar mensagem WhatsApp com emojis ----------
-    let msg = `🍽️ *Pedido de ${nome}*\n`;
-    msg += `📍 Endereço: ${endereco}\n`;
-    msg += `🏠 Local: ${local}\n\n`;
-    msg += `📋 *Itens do Pedido:*\n`;
+    // Montar mensagem WhatsApp
+    let msg = `🍽️ *Pedido de ${nome}*\n📍 Endereço: ${endereco}\n🏠 Local: ${local}\n\n📋 *Itens do Pedido:*\n`;
     if(marmita) msg += `🍱 Marmita ${marmita} - R$${valorMarmita}\n`;
     pedido.forEach(i => msg += `✅ ${i}\n`);
     refrigerantesSelecionados.forEach(r => msg += `🥤 ${r.nome} - R$${r.preco}\n`);
     if(adicionais) msg += `📝 ${adicionais}\n`;
-    msg += `💳 Pagamento: ${pagamento}\n`;
-    msg += `🏍️ Taxa de Entrega: R$${taxaEntrega.toFixed(2)}\n`;
-    msg += `💰 Total: R$${total.toFixed(2)}`;
+    msg += `💳 Pagamento: ${pagamento}\n🏍️ Taxa de Entrega: R$${taxaEntrega.toFixed(2)}\n💰 Total: R$${total.toFixed(2)}`;
 
-    // Abrir WhatsApp com a mensagem
     window.open(`https://wa.me/+556192633504?text=${encodeURIComponent(msg)}`, "_blank");
 
-    // ---------- Gerar PDF sem emojis ----------
-    // ---------- Gerar PDF sem emojis, mas com formatação melhor ----------
-const { jsPDF } = window.jspdf;
-const doc = new jsPDF();
-
-// Cabeçalho
-doc.setFontSize(18);
-doc.setFont("helvetica", "bold");
-doc.text("Restaurante Colinas", 10, 15);
-doc.setFontSize(12);
-doc.setFont("helvetica", "normal");
-
-// Dados do cliente
-doc.text(`Cliente: ${nome}`, 10, 25);
-doc.text(`Endereço: ${endereco}`, 10, 32);
-doc.text(`Local de entrega: ${local}`, 10, 39);
-
-// Separador
-doc.setLineWidth(0.5);
-doc.line(10, 44, 200, 44);
-
-// Itens do pedido
-doc.setFont("helvetica", "bold");
-doc.text("Itens do Pedido:", 10, 50);
-doc.setFont("helvetica", "normal");
-
-let y = 57;
-if(marmita){ doc.text(`Marmita ${marmita} - R$${valorMarmita}`, 12, y); y+=7; }
-pedido.forEach(i => { doc.text(`${i}`, 12, y); y+=7; });
-refrigerantesSelecionados.forEach(r => { doc.text(`${r.nome} - R$${r.preco}`, 12, y); y+=7; });
-if(adicionais){ doc.text(`Adicionais: ${adicionais}`, 12, y); y+=7; }
-
-// Separador antes do total
-doc.line(10, y, 200, y); y += 5;
-
-// Pagamento e taxa
-doc.text(`Pagamento: ${pagamento}`, 10, y); y+=7;
-doc.text(`Taxa de Entrega: R$${taxaEntrega.toFixed(2)}`, 10, y); y+=7;
-
-// Total destacado
-doc.setFont("helvetica", "bold");
-doc.setFontSize(14);
-doc.text(`TOTAL: R$${total.toFixed(2)}`, 10, y);
-
-// Abrir PDF em nova aba
-const pdfBlob = doc.output('blob');
-const pdfURL = URL.createObjectURL(pdfBlob);
-window.open(pdfURL, "_blank");
+    // Gerar PDF sem emojis
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+    doc.setFontSize(18); doc.setFont("helvetica", "bold"); doc.text("Restaurante Colinas",10,15);
+    doc.setFontSize(12); doc.setFont("helvetica", "normal");
+    doc.text(`Cliente: ${nome}`,10,25);
+    doc.text(`Endereço: ${endereco}`,10,32);
+    doc.text(`Local de entrega: ${local}`,10,39);
+    doc.line(10,44,200,44);
+    doc.setFont("helvetica","bold"); doc.text("Itens do Pedido:",10,50); doc.setFont("helvetica","normal");
+    let y=57;
+    if(marmita){ doc.text(`Marmita ${marmita} - R$${valorMarmita}`,12,y); y+=7; }
+    pedido.forEach(i=>{ doc.text(i,12,y); y+=7; });
+    refrigerantesSelecionados.forEach(r=>{ doc.text(`${r.nome} - R$${r.preco}`,12,y); y+=7; });
+    if(adicionais){ doc.text(`Adicionais: ${adicionais}`,12,y); y+=7; }
+    doc.line(10,y,200,y); y+=5;
+    doc.text(`Pagamento: ${pagamento}`,10,y); y+=7;
+    doc.text(`Taxa de Entrega: R$${taxaEntrega.toFixed(2)}`,10,y); y+=7;
+    doc.setFont("helvetica","bold"); doc.setFontSize(14); doc.text(`TOTAL: R$${total.toFixed(2)}`,10,y);
+    window.open(URL.createObjectURL(doc.output('blob')),"_blank");
+  });
 
 });
-
-  });
 </script>
 </body>
 </html>
-
-
-
-
-
