--- a/index.html
+++ b/index.html
@@ -4,33 +4,27 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cardápio Interativo</title>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <style>
-* { box-sizing: border-box; margin:0; padding:0; }
-body { font-family: Arial, sans-serif; background: #f5f5f5; display: flex; flex-direction: column; align-items: center; padding: 10px; }
-.cardapio { background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.2); max-width: 500px; width: 100%; margin-bottom: 20px; }
-.logo-container { display: flex; align-items: center; justify-content: flex-start; margin-bottom: 20px; }
-.logo-container img { height: 60px; margin-right: 15px; border-radius: 8px; }
-.titulo-container h1 { font-size: 1.5rem; color: #007BFF; margin-bottom: 5px; }
-.titulo-container h2 { font-size: 1.1rem; color: #555; font-weight: normal; }
-.titulo-container h3 { font-size: 1rem; margin-bottom: 10px; color: #333; }
-ul { list-style: none; padding: 0; }
-li { margin: 5px 0; cursor: pointer; display: flex; align-items: center; padding: 6px 10px; border-radius: 8px; transition: background 0.2s; }
-li:hover { background: #f0f0f0; }
-.checkbox-fake { width: 22px; height: 22px; border: 2px solid #007BFF; display: flex; align-items: center; justify-content: center; margin-right: 10px; border-radius: 4px; font-weight: bold; color: #fff; background: #007BFF; opacity: 0; transition: opacity 0.2s, transform 0.2s; flex-shrink: 0; }
-li.selected .checkbox-fake { opacity: 1; transform: scale(1.1); }
-li span { flex: 1; }
-#adicionais, input[type="text"], select { width: 100%; padding: 8px; margin-top: 8px; border-radius: 6px; border: 1px solid #ccc; }
-#enviarWhats { margin-top: 12px; padding: 10px; background: #25D366; color: #fff; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; width: 100%; font-size: 1rem; }
-label { display: block; margin-bottom: 6px; cursor: pointer; }
-.marmita-options label { display: block; margin-bottom: 8px; cursor: pointer; }
-.marmita-options input { margin-right: 8px; }
-@media (max-width: 600px) { 
-  .logo-container { flex-direction: column; align-items: center; text-align: center; } 
-  .logo-container img { margin-right: 0; margin-bottom: 8px; height: 50px; } 
-  .titulo-container h1 { font-size: 1.3rem; } 
-  .titulo-container h2 { font-size: 1rem; } 
-  #enviarWhats { font-size: 0.95rem; } 
-}
+*{box-sizing:border-box;margin:0;padding:0}
+body{font-family:Arial,sans-serif;background:#f5f5f5;display:flex;flex-direction:column;align-items:center;padding:10px}
+.cardapio{background:#fff;padding:20px;border-radius:12px;box-shadow:0 6px 15px rgba(0,0,0,0.2);max-width:500px;width:100%;margin-bottom:20px}
+.logo-container{display:flex;align-items:center;justify-content:flex-start;margin-bottom:20px}
+.logo-container img{height:60px;margin-right:15px;border-radius:8px}
+.titulo-container h1{font-size:1.5rem;color:#007BFF;margin-bottom:5px}
+.titulo-container h2{font-size:1.1rem;color:#555;font-weight:normal}
+.titulo-container h3{font-size:1rem;margin-bottom:10px;color:#333}
+ul{list-style:none;padding:0}
+li{margin:5px 0;cursor:pointer;display:flex;align-items:center;padding:6px 10px;border-radius:8px;transition:background 0.2s}
+li:hover{background:#f0f0f0}
+.checkbox-fake{width:22px;height:22px;border:2px solid #007BFF;display:flex;align-items:center;justify-content:center;margin-right:10px;border-radius:4px;font-weight:bold;color:#fff;background:#007BFF;opacity:0;transition:opacity 0.2s,transform 0.2s;flex-shrink:0}
+li.selected .checkbox-fake{opacity:1;transform:scale(1.1)}
+li span{flex:1}
+#adicionais,input[type="text"],select{width:100%;padding:8px;margin-top:8px;border-radius:6px;border:1px solid #ccc}
+#enviarWhats{margin-top:12px;padding:10px;background:#25D366;color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:bold;width:100%;font-size:1rem}
+label{display:block;margin-bottom:6px;cursor:pointer}
+.marmita-options label{display:block;margin-bottom:8px;cursor:pointer}
+.marmita-options input{margin-right:8px}
 </style>
 </head>
 <body>
@@ -40,23 +34,29 @@ label { display: block; margin-bottom: 6px; cursor: pointer; }
     <img src="logo.png" alt="Logo Restaurante">
     <div class="titulo-container">
       <h1>Restaurante Colinas</h1>
-      <h2>🍽️ Cardápio de Hoje – <span id="diaSemana"></span>, <span id="dataHoje"></span></h2>
-      <h3 id="horarioFuncionamento">Horário: --:-- - --:--</h3>
+      <h2>Cardápio de Hoje – <span id="diaSemana"></span>, <span id="dataHoje"></span></h2>
+      <h3 id="horarioFuncionamento">Horário: 11:00 - 14:00</h3>
     </div>
   </div>
 
-  <div class="marmita-options">
-    <h3>🍱 Escolha o tipo de Marmita</h3>
-  </div>
-
   <h3>🍖 Carnes</h3>
-  <ul id="carnes"></ul>
+  <ul id="carnes">
+    <li onclick="toggleItem(this)"><div class="checkbox-fake">✔</div><span>Frango Grelhado</span></li>
+    <li onclick="toggleItem(this)"><div class="checkbox-fake">✔</div><span>Bife Acebolado</span></li>
+  </ul>
 
   <h3>🥗 Acompanhamentos</h3>
-  <ul id="acompanhamentos"></ul>
+  <ul id="acompanhamentos">
+    <li onclick="toggleItem(this)"><div class="checkbox-fake">✔</div><span>Arroz</span></li>
+    <li onclick="toggleItem(this)"><div class="checkbox-fake">✔</div><span>Feijão</span></li>
+    <li onclick="toggleItem(this)"><div class="checkbox-fake">✔</div><span>Salada</span></li>
+  </ul>
 
   <h3>🥤 Refrigerantes</h3>
-  <ul id="refrigerantes"></ul>
+  <ul id="refrigerantes">
+    <li onclick="toggleItem(this)"><div class="checkbox-fake">✔</div><span>Coca-Cola</span></li>
+    <li onclick="toggleItem(this)"><div class="checkbox-fake">✔</div><span>Guaraná</span></li>
+  </ul>
 
   <h3>Adicionais:</h3>
   <input type="text" id="adicionais" placeholder="Digite adicionais">
@@ -64,220 +64,52 @@ label { display: block; margin-bottom: 6px; cursor: pointer; }
   <div class="cliente-info">
     <label for="nomeCliente">Nome do Cliente:</label>
     <input type="text" id="nomeCliente" placeholder="Digite seu nome">
-    <label for="enderecoCliente">Endereço:</label>
-    <input type="text" id="enderecoCliente" placeholder="Digite o endereço de entrega">
   </div>
 
-  <h3>📍 Local de Entrega</h3>
-  <select id="localEntrega"></select>
-
-  <h3>💳 Formas de Pagamento</h3>
-  <ul id="formasPagamentoList"></ul>
-
   <button id="enviarWhats">Enviar via WhatsApp</button>
-
-  <h3>📋 Pedido Selecionado</h3>
-  <ul id="itensPedido"><li>Nenhum item selecionado</li></ul>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
-const diasSemana = ["Domingo","Segunda-feira","Terça-feira","Quarta-feira","Quinta-feira","Sexta-feira","Sábado"];
-const hojeDate = new Date();
-document.getElementById("diaSemana").innerText = diasSemana[hojeDate.getDay()];
-const dia = String(hojeDate.getDate()).padStart(2,'0');
-const mes = String(hojeDate.getMonth()+1).padStart(2,'0');
-const ano = hojeDate.getFullYear();
-document.getElementById("dataHoje").innerText = `${dia}/${mes}/${ano}`;
+function toggleItem(li){
+  li.classList.toggle('selected');
+}
 
-fetch('cardapio.json?t=' + new Date().getTime())
-.then(response => response.json())
-.then(cardapio => {
+document.getElementById('enviarWhats').addEventListener('click', async () => {
+  const { jsPDF } = window.jspdf;
+  const nome = document.getElementById('nomeCliente').value.trim();
+  if (!nome){ alert('Digite o nome do cliente.'); return; }
 
-  document.getElementById("horarioFuncionamento").textContent = 
-    `Horário: ${cardapio.horarioFuncionamento.abertura} - ${cardapio.horarioFuncionamento.fechamento}`;
+  const selecionados = [...document.querySelectorAll('li.selected span')].map(s=>s.textContent);
+  const adicionais = document.getElementById('adicionais').value;
 
-  const marmitaOptions = document.querySelector(".marmita-options");
-  let marmita = "", valorMarmita = 0, limiteCarnes = 0;
-  let pedido = [], taxaEntrega = 0, pagamentoSelecionado = "";
-  let refrigerantesSelecionados = [];
-
-  Object.keys(cardapio.valoresMarmita).forEach(key=>{
-    const label = document.createElement("label");
-    label.innerHTML = `<input type="radio" name="marmita" value="${key}"> Marmita ${key} - R$${cardapio.valoresMarmita[key]},00`;
-    label.querySelector('input').addEventListener("change", ()=>{
-      marmita = key;
-      valorMarmita = cardapio.valoresMarmita[key];
-
-      limiteCarnes = key.includes("01 Opção") ? 1 : key.includes("02 Opção") ? 2 : 0;
-
-      document.querySelectorAll("#carnes li").forEach(li=>li.classList.remove("selected"));
-      pedido = pedido.filter(item => !cardapio.cardapio[diasSemana[hojeDate.getDay()].toLowerCase()].carnes.includes(item));
-
-      const acompanhamentosContainer = document.getElementById("acompanhamentos");
-      if (key.includes("Porção")) {
-        acompanhamentosContainer.querySelectorAll("li").forEach(li=>{
-          li.classList.remove("selected");
-          li.style.pointerEvents = "none";
-          li.style.opacity = "0.5";
-        });
-        pedido = pedido.filter(item => !cardapio.cardapio[diasSemana[hojeDate.getDay()].toLowerCase()].acompanhamentos.includes(item));
-      } else {
-        acompanhamentosContainer.querySelectorAll("li").forEach(li=>{
-          li.style.pointerEvents = "auto";
-          li.style.opacity = "1";
-        });
-      }
-
-      atualizarPedido();
-    });
-    marmitaOptions.appendChild(label);
+  const doc = new jsPDF();
+  doc.setFontSize(14);
+  doc.text("Pedido - Restaurante Colinas", 10, 15);
+  doc.setFontSize(12);
+  doc.text("Cliente: " + nome, 10, 30);
+  doc.text("Itens:", 10, 45);
+  let y = 55;
+  selecionados.forEach(item=>{
+    doc.text("- " + item, 15, y);
+    y += 7;
   });
-
-  function criarLista(itens, container, tipo="normal"){
-    container.innerHTML = "";
-    itens.forEach(i=>{
-      const li = document.createElement("li");
-      li.setAttribute("data-item", i);
-      li.innerHTML = `<div class="checkbox-fake">X</div><span>${i}</span>`;
-      if(tipo !== "carnes"){ li.classList.add("selected"); if(!pedido.includes(i)) pedido.push(i); }
-      li.addEventListener("click", ()=>{
-        if(tipo==="carnes"){
-          const selecionadas = container.querySelectorAll("li.selected");
-          if(!li.classList.contains("selected") && selecionadas.length >= limiteCarnes) return;
-        }
-        li.classList.toggle("selected");
-        const item = li.getAttribute("data-item");
-        if(li.classList.contains("selected")){ if(!pedido.includes(item)) pedido.push(item); }
-        else pedido = pedido.filter(x=>x!==item);
-        atualizarPedido();
-      });
-      container.appendChild(li);
-    });
+  if(adicionais){
+    doc.text("Adicionais: " + adicionais, 10, y+5);
   }
 
-  function criarListaRefrigerantes(itens, container){
-    container.innerHTML = "";
-    itens.forEach(i=>{
-      const li = document.createElement("li");
-      li.setAttribute("data-item", i);
-      li.innerHTML = `<div class="checkbox-fake">X</div><span>${i}</span>`;
-      li.addEventListener("click", ()=>{
-        li.classList.toggle("selected");
-        const item = li.getAttribute("data-item");
-        const preco = parseFloat(item.split('R$')[1]) || 0;
-        if(li.classList.contains("selected")){
-          if(!refrigerantesSelecionados.find(r=>r.nome===item)) refrigerantesSelecionados.push({nome:item, preco});
-          if(!pedido.includes(item)) pedido.push(item);
-        } else {
-          refrigerantesSelecionados = refrigerantesSelecionados.filter(r => r.nome !== item);
-          pedido = pedido.filter(x=>x!==item);
-        }
-        atualizarPedido();
-      });
-      container.appendChild(li);
-    });
-  }
+  // Cria o arquivo PDF e baixa localmente
+  const pdfBlob = doc.output('blob');
+  const pdfURL = URL.createObjectURL(pdfBlob);
+  const a = document.createElement('a');
+  a.href = pdfURL;
+  a.download = `pedido_${nome}.pdf`;
+  a.click();
 
-  const hojeCardapio = cardapio.cardapio[diasSemana[hojeDate.getDay()].toLowerCase()] || { carnes: [], acompanhamentos: [] };
-  criarLista(hojeCardapio.acompanhamentos, document.getElementById("acompanhamentos"), "acompanhamentos");
-  criarLista(hojeCardapio.carnes, document.getElementById("carnes"), "carnes");
-  criarListaRefrigerantes(Object.entries(cardapio.refrigerantes).flatMap(([tipo,list]) => list.map(r=>`${tipo} - ${r.nome} R$${r.preco}`)), document.getElementById("refrigerantes"));
-
-  const localEl = document.getElementById("localEntrega");
-  cardapio.locaisEntrega.forEach((loc,i)=>{
-    const opt = document.createElement("option");
-    opt.value = loc.nome;
-    opt.dataset.taxa = loc.taxa;
-    opt.textContent = `${loc.nome} - R$${loc.taxa.toFixed(2)}`;
-    if(i===0) taxaEntrega = loc.taxa;
-    localEl.appendChild(opt);
-  });
-  localEl.addEventListener("change", ()=>{ taxaEntrega = parseFloat(localEl.selectedOptions[0].dataset.taxa); atualizarPedido(); });
-
-  const formasEl = document.getElementById("formasPagamentoList");
-  cardapio.formasPagamento.forEach(f=>{
-    const li = document.createElement("li");
-    li.innerHTML = `<div class="checkbox-fake">X</div><span>${f}</span>`;
-    li.addEventListener("click", ()=>{
-      formasEl.querySelectorAll("li").forEach(l=>l.classList.remove("selected"));
-      li.classList.add("selected");
-      pagamentoSelecionado = f;
-      atualizarPedido();
-    });
-    formasEl.appendChild(li);
-  });
-
-  function atualizarPedido(){
-    const adicionais = document.getElementById("adicionais").value;
-    const totalRef = refrigerantesSelecionados.reduce((sum,r)=>sum+r.preco,0);
-    const total = valorMarmita + taxaEntrega + totalRef;
-
-    const itensEl = document.getElementById("itensPedido");
-    itensEl.innerHTML = `
-      ${marmita?`<li>🍱 Marmita ${marmita} - R$${valorMarmita}</li>`:""}
-      ${pedido.length?pedido.map(i=>`<li>✅ ${i}</li>`).join(""):"<li>Nenhum item selecionado</li>"}
-      ${adicionais?`<li>📝 ${adicionais}</li>`:""}
-      ${pagamentoSelecionado?`<li>💳 Pagamento: ${pagamentoSelecionado}</li>`:""}
-      <li>🏍️ Taxa de Entrega: R$${taxaEntrega.toFixed(2)}</li>
-      <li>💰 Total: R$${total.toFixed(2)}</li>
-    `;
-  }
-
-  document.getElementById("enviarWhats").addEventListener("click", () => {
-    const agora = new Date();
-    const [horaAbertura, minAbertura] = cardapio.horarioFuncionamento.abertura.split(":").map(Number);
-    const [horaFechamento, minFechamento] = cardapio.horarioFuncionamento.fechamento.split(":").map(Number);
-    const agoraMin = agora.getHours()*60 + agora.getMinutes();
-    const aberturaMin = horaAbertura*60 + minAbertura;
-    const fechamentoMin = horaFechamento*60 + minFechamento;
-
-    if(agoraMin < aberturaMin || agoraMin > fechamentoMin){
-      alert(`Desculpe! Pedidos só podem ser feitos entre ${cardapio.horarioFuncionamento.abertura} e ${cardapio.horarioFuncionamento.fechamento}.`);
-      return;
-    }
-
-    const nome = document.getElementById("nomeCliente").value || "Cliente";
-    const endereco = document.getElementById("enderecoCliente").value || "Não informado";
-    const adicionais = document.getElementById("adicionais").value || "";
-    const local = document.getElementById("localEntrega").value;
-    const pagamento = pagamentoSelecionado || "Não definido";
-    const totalRef = refrigerantesSelecionados.reduce((sum,r)=>sum+r.preco,0);
-    const total = valorMarmita + taxaEntrega + totalRef;
-
-    // Montar mensagem WhatsApp
-    let msg = `🍽️ *Pedido de ${nome}*\n📍 Endereço: ${endereco}\n🏠 Local: ${local}\n\n📋 *Itens do Pedido:*\n`;
-    if(marmita) msg += `🍱 Marmita ${marmita} - R$${valorMarmita}\n`;
-    pedido.forEach(i => msg += `✅ ${i}\n`);
-    refrigerantesSelecionados.forEach(r => msg += `🥤 ${r.nome} - R$${r.preco}\n`);
-    if(adicionais) msg += `📝 ${adicionais}\n`;
-    msg += `💳 Pagamento: ${pagamento}\n🏍️ Taxa de Entrega: R$${taxaEntrega.toFixed(2)}\n💰 Total: R$${total.toFixed(2)}`;
-
-    window.open(`https://wa.me/+556192633504?text=${encodeURIComponent(msg)}`, "_blank");
-
-    // Gerar PDF sem emojis
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-    doc.setFontSize(18); doc.setFont("helvetica", "bold"); doc.text("Restaurante Colinas",10,15);
-    doc.setFontSize(12); doc.setFont("helvetica", "normal");
-    doc.text(`Cliente: ${nome}`,10,25);
-    doc.text(`Endereço: ${endereco}`,10,32);
-    doc.text(`Local de entrega: ${local}`,10,39);
-    doc.line(10,44,200,44);
-    doc.setFont("helvetica","bold"); doc.text("Itens do Pedido:",10,50); doc.setFont("helvetica","normal");
-    let y=57;
-    if(marmita){ doc.text(`Marmita ${marmita} - R$${valorMarmita}`,12,y); y+=7; }
-    pedido.forEach(i=>{ doc.text(i,12,y); y+=7; });
-    refrigerantesSelecionados.forEach(r=>{ doc.text(`${r.nome} - R$${r.preco}`,12,y); y+=7; });
-    if(adicionais){ doc.text(`Adicionais: ${adicionais}`,12,y); y+=7; }
-    doc.line(10,y,200,y); y+=5;
-    doc.text(`Pagamento: ${pagamento}`,10,y); y+=7;
-    doc.text(`Taxa de Entrega: R$${taxaEntrega.toFixed(2)}`,10,y); y+=7;
-    doc.setFont("helvetica","bold"); doc.setFontSize(14); doc.text(`TOTAL: R$${total.toFixed(2)}`,10,y);
-    window.open(URL.createObjectURL(doc.output('blob')),"_blank");
-  });
-
+  // Abre o WhatsApp Web com o número do restaurante
+  const numeroRestaurante = "5599999999999"; // <-- coloque o número do restaurante com DDI e DDD
+  window.open(`https://wa.me/${numeroRestaurante}?text=Olá,%20segue%20em%20anexo%20o%20pedido%20de%20${encodeURIComponent(nome)}.%20(O%20arquivo%20PDF%20foi%20baixado%20automaticamente%20no%20seu%20dispositivo)`, "_blank");
 });
 </script>
+
 </body>
 </html>
