--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ label{display:block;margin-top:12px;margin-bottom:6px;cursor:pointer}
     <img src="logo.png" alt="Logo Restaurante">
     <div class="titulo-container">
       <h1>Restaurante Colinas</h1>
-      <h2>Cardápio de Hoje – <span id="diaSemana"></span>, <span id="dataHoje"></span></h2>
+      <h2>🍽️ Cardápio de Hoje – <span id="diaSemana"></span>, <span id="dataHoje"></span></h2>
       <h3 id="horarioFuncionamento">Horário: 11:00 - 14:00</h3>
     </div>
   </div>
@@ -79,11 +79,13 @@ document.getElementById("enviarWhats").addEventListener("click", async () => {
     return;
   }
 
-  const selecionados = [...document.querySelectorAll("li.selected span")].map(el => el.textContent);
+  // ✅ Coletar apenas 1x cada item selecionado
+  const selecionados = [...document.querySelectorAll("li.selected")]
+    .map(li => li.querySelector("span").textContent);
+
   const adicionais = document.getElementById("adicionais").value.trim();
 
-  let conteudo = `Pedido de ${nomeCliente}\n\n`;
-  conteudo += "Itens Selecionados:\n";
+  let conteudo = `Pedido de ${nomeCliente}\n\nItens Selecionados:\n`;
   selecionados.forEach(i => conteudo += " - " + i + "\n");
   if (adicionais) conteudo += "\nAdicionais: " + adicionais;
 
@@ -101,11 +103,10 @@ document.getElementById("enviarWhats").addEventListener("click", async () => {
   a.click();
 
   // abrir conversa no WhatsApp (número do restaurante)
-  const numeroRestaurante = "5599999999999"; // coloque o número do restaurante com DDI e DDD
+  const numeroRestaurante = "5599999999999"; // coloque DDI+DDD+número
   const texto = encodeURIComponent(`Olá, segue o pedido do cliente ${nomeCliente}. O PDF está em anexo.`);
   window.open(`https://wa.me/${numeroRestaurante}?text=${texto}`, "_blank");
 });
 </script>
-
 </body>
 </html>
